About paragraps gaps on tablet fixed

--- a/src/scss/components/about.scss
+++ b/src/scss/components/about.scss
@@ -46,7 +46,11 @@
     &__text{
         @include devices(tablet){
             display: inline;
-            
+            &::after{
+                content:'';
+                display: block;
+                height: 10px;;
+            }
         }
     }
 }
